QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


GIT HEAD

- Add Clear preset button to Setup dialog (refactored
  from an original patch by kmatheussen #113)

- Use default values for most preset parameters: sample
  rate, frames/period (aka. buffer-size), periods/buffer,
  realtime priority, port maximum, client timeout, word
  length, wait time, channel maximum (refactored from an
  original patch by kmatheussen #112)


0.9.0  2020-12-17  A Winter'20 Release.

- List only available backend drivers when JACK D-BUS
  is enabled.

- Graph client-name / node-title aliases persistence
  have been hopefully fixed.

- Get rid of those "JACK has crashed" red-herrings
  from latest Windows(tm) builds.

- Early fixing to build for Qt >= 6.0.0 and comply
  with C++17 standard.


0.6.3  2020-07-31  A Summer'20 Release.

- Clock source and Self connect restriction options
  have been added to Setup / Settings / Advanced 
  (only enabled when JACK D-BUS control interface
  is in effect).

- Added preliminary support for JACK CV signal-type
  ports and JACK OSC event-type ports (Graph only).

- Left-clicking on the system-tray icon now simply
  toggles the main widget visibility, disregarding
  if already hidden undercover to other windows.

- Graph nodes and ports are now presented with some
  gradient background.

- Fixed Setup dialog Cancel (or close) behavior when
  Settings > Parameters > Frames/Period (aka. buffer-
  size) it's the only setting that's changed.

- Early fixing to build for Qt >= 5.15.0.

  
0.6.2  2020-03-24  A Spring'20 Release.

- A scalable (.svg) icon version has been added.

- Make man page compression reproducible (after request
  by Jelle van der Waa, while on the Vee-Ones, thanks).

- Ditching deprecated QTime methods for QElapsedTimer's
  (in compliance to Qt >= 5.14.0).

- Bumped copyright headers into the New Year (2020).


0.6.1  2019-12-22  The Winter'19 Release.
